[project]
name = "joyst"
version = "0.1.0"
description = "Journey Over Your Saved Titles - Data Platform"
requires-python = ">=3.10"
dependencies = [
    "pyspark>=3.5.0",
    "pytest>=7.0",
    "requests>=2.31.0",
]

[tool.uv]
# uv-specific config (optional)

[tool.setuptools.packages.find]
where = ["."]
include = ["spark_jobs", "pipelines", "dags"]
exclude = ["terraform", "data", "notebooks"]

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = ["build", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = ["tests"]
